--- a/root/css/el.css
+++ b/root/css/el.css
@@ -53,3 +53,14 @@ path.rail-interline
 .rail-node {
     z-index: 4;
 }
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
