--- a/root/css/el.css
+++ b/root/css/el.css
@@ -53,6 +53,13 @@ path.rail-interline
 .rail-node {
     z-index: 4;
 }
+.info {
+    padding: 6px 8px;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
 .legend {
     line-height: 18px;
     color: #555;
