--- a/root/css/el.css
+++ b/root/css/el.css
@@ -5,6 +5,7 @@ html,body,#map
     height:100%;
     margin:0;
     padding:0;
+    padding-bottom:25px;
     width:100%;
 }
 
@@ -157,4 +158,17 @@ span.warehouse-bug
 {
     margin-top:10px;
     margin-bottom:10px;
+}
+
+div#control-bar {
+    width: 100%;
+    background-color:#ddd;
+    margin: 0;
+    padding: 0;
+}
+.el-top-navbar {
+    margin-bottom: 0;
+    -webkit-box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
+    box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
 }
