Login and reg done; form doesnt reload in modal, but that's OK for now

--- a/root/templates/login.tt
+++ b/root/templates/login.tt
@@ -1,2 +1,11 @@
-[% login_form.render %]
-<p><a href="/register">Register</a></p>
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h4 class="modal-title" id="login-modal-title">Login</h4>
+  </div>
+  <div class="modal-body">
+    [% login_form.render %]
+  </div>
+  <div class="modal-footer">
+    <div class="pull-left"><a class="register" href="/register" data-toggle="modal" data-target="#reg-modal"><h4>Or Register</h4></a></div>
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  </div>
