--- a/root/templates/register.tt
+++ b/root/templates/register.tt
@@ -1,1 +1,10 @@
-[% registration_form.render %]
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h4 class="modal-title" id="register-modal-label">Register</h4>
+  </div>
+  <div class="modal-body">
+    [% registration_form.render %]
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  </div>
