--- a/root/templates/admin/index.tt
+++ b/root/templates/admin/index.tt
@@ -1,1 +1,9 @@
-<h1>Empire Logistics Admin</h1>
+<h1>Administration</h1>
+
+<div>
+<ul>
+[% FOR page IN admin_pages %]
+    <li><a href="[% page.url %]">[% page.name %]</a></li>
+[% END %]
+</ul>
+</div>
