--- a/root/templates/admin/bulk-import/index.tt
+++ b/root/templates/admin/bulk-import/index.tt
@@ -1,2 +1,3 @@
+<h2><a href="/admin">Back to Main Admin Page</a></h2>
 <script type="text/javascript" src="/js/bulk-import.js"></script>
 [% form.render %]
