--- a/root/css/el.css
+++ b/root/css/el.css
@@ -2,173 +2,180 @@
 
 html,body,#map
 {
-    height:100%;
-    margin:0;
-    padding:0;
-    padding-bottom:25px;
-    width:100%;
+	height:100%;
+	margin:0;
+	padding:0;
+	padding-bottom:25px;
+	width:100%;
 }
 
 body
 {
-    background-color:#ddd;
-    font-family:Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size:12px;
-    margin:0;
-    overflow:hidden;
+	background-color:#ddd;
+	font-family:Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size:12px;
+	margin:0;
 }
-
 path
 {
-    fill:none;
-    stroke-linecap:round;
+	fill:none;
+	stroke-linecap:round;
 }
 
 .rail-line
 {
-    fill:none;
-    stroke:#000;
-    stroke-linejoin:round;
-    stroke-width:4;
+	fill:none;
+	stroke:#000;
+	stroke-linejoin:round;
+	stroke-width:4;
 }
 
 .embargo
 {
-    stroke:#D2691E;
+	stroke:#D2691E;
 }
 
 .suspended
 {
-    stroke:#B8860B;
+	stroke:#B8860B;
 }
 
 .abandoned
 {
-    stroke:#696969;
+	stroke:#696969;
 }
 
 .rail-interline
 {
-    fill:none;
-    stroke:#DAA520;
-    stroke-linejoin:round;
-    stroke-width:4;
+	fill:none;
+	stroke:#DAA520;
+	stroke-linejoin:round;
+	stroke-width:4;
 }
 
 .info
 {
-    padding:6px 8px;
-    background:#FFF;
-    background:rgba(255,255,255,0.9);
-    box-shadow:0 0 15px rgba(0,0,0,0.2);
-    border-radius:5px;
+	padding:6px 8px;
+	background:#FFF;
+	background:rgba(255,255,255,0.9);
+	box-shadow:0 0 15px rgba(0,0,0,0.2);
+	border-radius:5px;
 }
 
 .legend
 {
-    line-height:18px;
-    color:#555;
+	line-height:18px;
+	color:#555;
 }
 
 .legend i
 {
-    width:18px;
-    height:18px;
-    float:left;
-    margin-right:8px;
-    opacity:1;
+	width:18px;
+	height:18px;
+	float:left;
+	margin-right:8px;
+	opacity:1;
 }
 
 .stroke-highlight
 {
-    stroke:#5bc0de;
+	stroke:#5bc0de;
 }
 
 .fill-highlight
 {
-    fill:#5bc0de;
+	fill:#5bc0de;
 }
 
 .popover
 {
-    max-width:600px;
+	max-width:600px;
 }
 
 span.rail-line-bug
 {
-    background-color:transparent;
-    background-image:url(/images/railroad.png);
-    background-repeat:no-repeat;
-    margin-right:1em;
-    background-size:contain;
-    height:18px;
-    width:18px;
-    display:inline-block;
+	background-color:transparent;
+	background-image:url(/images/railroad.png);
+	background-repeat:no-repeat;
+	margin-right:1em;
+	background-size:contain;
+	height:18px;
+	width:18px;
+	display:inline-block;
 }
 
 span.rail-node-bug
 {
-    background-color:transparent;
-    background-image:url(/images/rail-node.png);
-    background-repeat:no-repeat;
-    margin-right:1em;
-    background-size:contain;
-    height:18px;
-    width:18px;
-    display:inline-block;
+	background-color:transparent;
+	background-image:url(/images/rail-node.png);
+	background-repeat:no-repeat;
+	margin-right:1em;
+	background-size:contain;
+	height:18px;
+	width:18px;
+	display:inline-block;
 }
 
 span.rail-interline-bug
 {
-    background-color:transparent;
-    background-image:url(/images/rail-interline.png);
-    background-repeat:no-repeat;
-    margin-right:1em;
-    background-size:contain;
-    height:18px;
-    width:18px;
-    display:inline-block;
+	background-color:transparent;
+	background-image:url(/images/rail-interline.png);
+	background-repeat:no-repeat;
+	margin-right:1em;
+	background-size:contain;
+	height:18px;
+	width:18px;
+	display:inline-block;
 }
 
 span.port-bug
 {
-    background-color:transparent;
-    background-image:url(/images/port.png);
-    background-repeat:no-repeat;
-    margin-right:1em;
-    background-size:contain;
-    height:18px;
-    width:18px;
-    display:inline-block;
+	background-color:transparent;
+	background-image:url(/images/port.png);
+	background-repeat:no-repeat;
+	margin-right:1em;
+	background-size:contain;
+	height:18px;
+	width:18px;
+	display:inline-block;
 }
 
 span.warehouse-bug
 {
-    background-color:transparent;
-    background-image:url(/images/warehouse.png);
-    background-repeat:no-repeat;
-    margin-right:1em;
-    background-size:contain;
-    height:18px;
-    width:18px;
-    display:inline-block;
+	background-color:transparent;
+	background-image:url(/images/warehouse.png);
+	background-repeat:no-repeat;
+	margin-right:1em;
+	background-size:contain;
+	height:18px;
+	width:18px;
+	display:inline-block;
 }
 
 .dl-horizontal hr
 {
-    margin-top:10px;
-    margin-bottom:10px;
+	margin-top:10px;
+	margin-bottom:10px;
 }
 
-div#control-bar {
-    width: 100%;
-    background-color:#ddd;
-    margin: 0;
-    padding: 0;
+div#control-bar
+{
+	width:100%;
+	background-color:#ddd;
+	margin:0;
+	padding:0;
 }
-.el-top-navbar {
-    margin-bottom: 0;
-    -webkit-box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
-    box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.2);
+
+.el-top-navbar
+{
+	margin-bottom:0;
+	-webkit-box-shadow:0 3px 3px 3px rgba(0,0,0,0.2);
+	-moz-box-shadow:0 3px 3px 3px rgba(0,0,0,0.2);
+	box-shadow:0 3px 3px 3px rgba(0,0,0,0.2);
+}
+
+.container-fluid
+{
+	padding-left:15px;
+	padding-right:15px;
 }
