--- a/root/templates/admin/list.tt
+++ b/root/templates/admin/list.tt
@@ -2,35 +2,22 @@
     <h2><a href="/admin">Back to Main Admin Page</a></h2>
 
     <div>
-        <fieldset><legend>Create New</legend>
-            <a href="[% c.uri_for('create') %]">[% c.loc('New [_1]', item_rs.result_source.source_name) %]</a>
-        </fieldset>
+        <p><a href="[% c.uri_for('create') %]">[% c.loc('New [_1]', item_rs.result_source.source_name) %]</a></p>
+
+[% INCLUDE pages %]
+
     </div>
 
 <div>
-    <fieldset><legend>Pages</legend>
-    <div>
-        [% IF pager.previous_page %]
-            <a href="[% c.request.uri_with( page => pager.previous_page ) %]">[% c.loc('Previous Page') %]</a>
-        [% END %]
-    </div>
-    <div>
-        [% IF pager.next_page %]
-            <a href="[% c.request.uri_with( page => pager.next_page ) %]">[% c.loc('Next Page') %]</a>
-        [% END %]
-    </div>
-    </fieldset>
-</div>
-
-<div>
-<table id="list"tablesorter">
+<table class="table table-hover" id="list">
     <thead>
         <tr>
         [% FOREACH col IN item_rs.result_source.columns %]
-             [% UNLESS col == 'id' %]
-                <th class="header[% IF col == 'date_created' || col == 'begin_date' || col == 'end_date' %] { sorter: 'ymd' }[% END %]">[% col | ucfirst %]</th>
+             [% UNLESS col == 'id' || col == 'password' || col == 'notes' || col == 'description' %]
+                <th class="header">[% item_rs.labels.$col %]</th>
              [% END %]
         [% END %]
+            <th class="header">Actions</th>
         </tr>
     </thead>
 [% # Display each item in a table row %]
@@ -38,10 +25,15 @@
     [% FOREACH item IN items -%]
         <tr>
             [% FOREACH col IN item_rs.result_source.columns %]
-              [% UNLESS col == 'id' %]
+              [% UNLESS col == 'id' || col == 'password' || col == 'notes' || col == 'description' %]
                 <td>
                     <a href="[% c.uri_for(c.controller("item"), item.id, 'edit' ) %]">
-                        [% IF item.$col.can('ymd') %]
+                        [% IF item.$col.can('ymd') && col == 'delete_time' %]
+                            [% IF item.$col.defined %]
+                            <p>Yes</p>
+                            [% ELSE %]
+                            [% END %]
+                        [% ELSIF item.$col.can('ymd') && !(col == 'delete_time')%]
                             [% item.$col.ymd %]
                         [% ELSE %]
                             [% item.$col %]
@@ -51,7 +43,17 @@
               [% END %]
             [% END %]
             <td>
-                <a href="[% c.uri_for(c.controller("item"), item.id, 'delete' )%]">[% c.loc('Delete') %]</a>
+            [% IF item.delete_time.defined %]
+                <a class="btn btn-info" href="[% c.uri_for(c.controller("item"), item.id, 'restore' )%]">
+                  <i class="glyphicon-undo glyphicon-white"></i>
+                    [% c.loc('Restore') %]
+                </a>
+            [% ELSE %]
+                <a class="btn btn-danger" href="[% c.uri_for(c.controller("item"), item.id, 'delete' )%]">
+                  <i class="glyphicon-trash glyphicon-white"></i>
+                    [% c.loc('Delete') %]
+                </a>
+            [% END %]
             </td>
         </tr>
     [% END -%]
@@ -59,18 +61,21 @@
 </table>
 </div>
 
-<div>
-    <fieldset>
-    <legend>Pages</legend>
-    <div>
+[% INCLUDE pages %]
+
+[% BLOCK pages %]
+[%  IF pager.previous_page OR pager.next_page %]
+<div class="row">
+    <div class="col-md-5">
         [% IF pager.previous_page %]
             <a href="[% c.request.uri_with( page => pager.previous_page ) %]">[% c.loc('Previous Page') %]</a>
         [% END %]
     </div>
-    <div>
+    <div class="col-md-5">
         [% IF pager.next_page %]
             <a href="[% c.request.uri_with( page => pager.next_page ) %]">[% c.loc('Next Page') %]</a>
         [% END %]
     </div>
-    </fieldset>
 </div>
+[%  END %]
+[% END %]
