--- a/root/templates/admin/wrapper.tt
+++ b/root/templates/admin/wrapper.tt
@@ -1,4 +1,9 @@
-[% WRAPPER 'wrapper.tt' %]
+[% WRAPPER 'wrapper.tt'
+    body_class = 'admin'
+%]
+[% style_added = c.add_stylesheet('/css/lib/dataTables.bootstrap.css') %]
+[% js_added = c.add_jsfile('/js/lib/jquery.dataTables.min.js') %]
+[% js_added = c.add_jsfile('/js/lib/dataTables.bootstrap.js') %]
 <h1>Administration</h1>
 <div class="row">
     <div class="col-md-2" id="admin-nav">
