WarehouseOwner migrated from enum to table, add new form for it

--- a/root/templates/admin/create_update.tt
+++ b/root/templates/admin/create_update.tt
@@ -1,8 +1,8 @@
 [% title = (creation == 1 ? 'Create' : 'Edit') %]
-[% meta.title = title _ " " _ item_name %]
+[% meta.title = title _ " " _ class_name %]
 <h2><a href="/admin">Back to Admin Page</a></h2>
-<h2><a href="/admin/[% item_name %]">Back to [% item_name | ucfirst %] Page</a></h2>
-[% page_title = (creation == 1 ? 'Create ' _ item_name : 'Edit ' _ item_name) %]
+<h2><a href="/admin/[% c.controller.actions.base.PathPart.0 %]">Back to [% class_name %] Page</a></h2>
+[% page_title = (creation == 1 ? 'Create ' _ class_name : 'Edit ' _ class_name ) %]
 <h3>[% page_title %]</h3>
 <div>
     [% form.render %]
