Make dataTable from admin lists as well

--- a/root/templates/admin/list.tt
+++ b/root/templates/admin/list.tt
@@ -81,3 +81,11 @@
 </div>
 [%  END %]
 [% END %]
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#list').dataTable( {
+        "sPaginationType": "bootstrap",
+        "aaSorting": [[ 0, "desc" ]]
+    } );
+} );
+</script>
